fixed overlap of register button and h3 text bug 741106

--- a/openstack-dashboard/media/dashboard/css/openstack.css
+++ b/openstack-dashboard/media/dashboard/css/openstack.css
@@ -195,7 +195,7 @@ span.data {
 
 #home_login fieldset {
 	width: 400px;
-	padding: 20px;
+    padding: 20px 20px 46px 20px;
 }
 
 #home_login label {
